logs/watchdog_20251012_0415.log
[12/10/2025  4:15:01,80] START WATCHDOG 
  File "C:\AUTOMAZIONE\odin_watchdog_mt5.py", line 192
    elif step >= 3:
    ^^^^
SyntaxError: invalid syntax
[12/10/2025  4:15:02,05] END WATCHDOG 
